test-cases/negative/test_106_circular_import_b.lay
# negative test: circular import part 2
# expected: resolver should catch this

import a from './test_105_circular_import.lay'


